<resources>
    <string name="app_name">NBATeams</string>
    <string name="teams_menu_item_title">Teams</string>
    <string name="players_menu_item_title">Players</string>
    <string name="full_name">Full name: </string>
    <string name="team_name">Team name: </string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="position">Position: </string>
    <string name="team_city">City: </string>
    <string name="conference">Conference: </string>
    <string name="division">Division: </string>
    <string name="abbreviation">Abbreviation: </string>
    <string name="height_measure_unit">" feet"</string>
    <string name="weight_measure_unit">" pounds"</string>
    <string name="title_error_dialog">An error has occurred</string>
    <string name="text_error_dialog">Please check your connection and try again.</string>
    <string name="button_try_again">Try again</string>
    <string name="button_cancel">Cancel</string>
    <string name="theme_menu">Change theme</string>
    <string name="theme_selected">selected_theme</string>
    <string name="checkbox_selected">selected_checkbox</string>
    <string name="light_theme_description">Light</string>
    <string name="dark_theme_description">Dark</string>
    <string name="system_theme_description">System default</string>
</resources>